--- a/V2/qgis2web_2018_02_24-13_50_16_058000/index.html
+++ b/V2/qgis2web_2018_02_24-13_50_16_058000/index.html
@@ -40,9 +40,8 @@
         var hash = new L.Hash(map);
         map.attributionControl.addAttribution('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a>');
         var bounds_group = new L.featureGroup([]);
-        var basemap0 = L.tileLayer('http://{s}.www.toolserver.org/tiles/bw-mapnik/{z}/{x}/{y}.png', {
-            attribution: '&copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>',
-            maxZoom: 28
+        var basemap0 = L.tileLayer('https://api.mapbox.com/styles/v1/hopperk/cje336cii0ytv2rp4vai6ygod/tiles/256/{z}/{x}/{y}?access_token=pk.eyJ1IjoiaG9wcGVyayIsImEiOiJjamUzMXZndXYxZ2J5MndxdGtwa3RsZzJuIn0.5b93aMvnmUwntul5MqIUow
+
         });
         basemap0.addTo(map);
         function setBounds() {
